<?xml version="1.0"?>
<package format="3">
  <name>assignment_ros2_tf2_transforms</name>
  <version>0.0.0</version>
  <description>ROS2 TF2 transform broadcaster assignment</description>

  <maintainer email="nandini@example.com">Nandini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ros2run</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
